--- a/src/main/resources/templates/add_course.html
+++ b/src/main/resources/templates/add_course.html
@@ -17,9 +17,9 @@
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<form autocomplete="off" action="#" th:action="@{/add_course}"
-					th:object="${training}" method="post" class="form-horizontal"
-					role="form">
-					<h2>Registration Form</h2>
+					th:object="${trainingDTO}" method="post" class="form-horizontal"
+					role="form" enctype="multipart/form-data">
+					<h2>Create your course</h2>
 					<div class="form-group">
 						<div class="col-sm-9">
 						<label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
@@ -31,32 +31,32 @@
 
 					<div class="form-group">
 						<div class="col-sm-9">
-						<label	th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
+						<label	th:if="${#fields.hasErrors('description')}" th:errors="*{description}"
 								class="validation-message"></label>
-							<input type="text" th:field="*{lastName}"
-								placeholder="Last Name" class="form-control" /> 
+							<input type="text" th:field="*{description}"
+								placeholder="Description" class="form-control" /> 
 						</div>
 					</div>
 					<div class="form-group">
 						<div class="col-sm-9">
-							<input type="text" th:field="*{email}" placeholder="Email"
+							<input type="file" th:field="*{file}"
+								placeholder="Add conent" class="form-control" /> <label
+								th:if="${#fields.hasErrors('file')}" th:errors="*{file}"
+								class="validation-message"></label>
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-sm-9">
+							<input type="number" th:field="*{price}" placeholder="Price"
 								class="form-control" /> <label
-								th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
-								class="validation-message"></label>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="password" th:field="*{password}"
-								placeholder="Password" class="form-control" /> <label
-								th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+								th:if="${#fields.hasErrors('price')}" th:errors="*{price}"
 								class="validation-message"></label>
 						</div>
 					</div>
 
 					<div class="form-group">
 						<div class="col-sm-9">
-							<button type="submit" class="btn btn-primary btn-block">Register User</button>
+							<button type="submit" class="btn btn-primary btn-block">Create course</button>
 						</div>
 					</div>
 					
