--- a/src/main/resources/static/css/sarna.css
+++ b/src/main/resources/static/css/sarna.css
@@ -3,6 +3,15 @@ body {
     font-family: 'Karla', sans-serif;
 }
 
+#cursesForm{
+    margin:30px;
+    background-color:#ffa8a8;
+    padding:15px;
+    border-radius: 25px;
+}
+
+
+
 ul.main-menu {
 
     list-style-type: none;
@@ -66,7 +75,6 @@ label .special {
 }
 
 label {
-    display:block;
 }
 
 ul.small-menu {
@@ -131,7 +139,7 @@ ul.small-menu li a {
 
 }
 
-input[type="text"],input[type="file"],textarea {
+input[type="text"],input[type="file"], input[type="number"],textarea {
     padding: 10px;
     border: solid 1px #fff;
     box-shadow: inset 1px 1px 2px 0 #707070;
@@ -177,6 +185,11 @@ input:focus {
 .btn-default:hover {
     background-color: dimgrey;
     color: white;
+}
+
+.theCourse{
+    min-height:400px;
+    max-height:400px;
 }
 
 ul.main-menu li a {
@@ -264,16 +277,46 @@ div.well{
         
         .curseButton{
             margin: 10px 10px;
-        }
-
-        .courseLink{
-            color:red;
-            text-decoration: none;
-            font-size:15px;
+            padding: 10px;
             font-weight: bold;
         }
+
+
 
         .curseDetailsInfo{
             display:block;
 
         }
+
+        .courseArea{
+            background-color:#e3e6ea;
+            border-radius: 25px;
+            padding:20px;
+        }
+
+.btn-info{
+    margin-right: 10px;
+    color: #fff;
+    background-color: orange;
+    border-color: orange;
+}
+
+.courseLink{
+    text-decoration: none;
+    color:orange;
+    font-weight: normal;
+
+
+}
+
+.courseLink:hover{
+    color:dimgrey;
+    text-decoration: none;
+
+    font-weight: bold;
+}
+
+.attribute-value{
+    font-size:18px;
+    margin-left:3px;
+}
