--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -12,11 +12,10 @@
 	<form th:action="@{/}" method="get">
 		<button class="btn btn-md btn-warning btn-block" type="Submit">Go To Login Page</button>
 	</form>	
-	
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-				<form autocomplete="off" action="#" th:action="@{/registration}"
+				<form autocomplete="off" action="#" th:action="@{'/registration?token=' + ${param.token[0]}}"
 					th:object="${user}" method="post" class="form-horizontal"
 					role="form">
 					<h2>Registration Form</h2>
