--- a/src/main/resources/templates/curse.html
+++ b/src/main/resources/templates/curse.html
@@ -25,11 +25,11 @@
 <ul class="main-menu">
     <li><a class="active" href="#home" id="mainLogo"><img width="151" height="38" src="logo.jpg"/></a></li>
     
-    <li><input type="text" aria-label="Szukaj kursów: " placeholder="Szukaj Kursów..." id="findCourse">
-        <button type="button" class="btn btn-default" id="courseLookupButton">Szukaj</button>
+    <li><input type="text" aria-label="Search: " placeholder="Search..." id="findCourse">
+        <button type="button" class="btn btn-default" id="courseLookupButton">Search</button>
     </li>
   
-    <li class="right"><a href="login.html" id="login">Logowanie</a></li>
+    <li class="right"><a href="login.html" id="login">Login</a></li>
 </ul>
 <em></em>
 
@@ -71,7 +71,7 @@
 </div>
     
 <div class="col-md-4">
-    <label>  Moje kursy:</label>
+    <label>  My courses:</label>
   <ol>
       
       <li> Kurs 1</li> <button  class="btn btn-default" > Edytuj</button><button  class="btn btn-default" > Usuń</button>
