--- a/src/main/resources/templates/loggedIndex.html
+++ b/src/main/resources/templates/loggedIndex.html
@@ -27,11 +27,11 @@
     <li><a class="active" href="#home" id="mainLogo"><img width="151" height="38" src="/images/logo.jpg"/></a></li>
 
     <li><input type="text" aria-label="Szukaj kursów: " placeholder="Szukaj Kursów..." id="findCourse">
-        <button type="button" class="btn btn-default" id="courseLookupButton">Szukaj</button>
+        <button type="button" class="btn btn-default" id="courseLookupButton">Search</button>
     </li>
 
     <li class="right">
-        <a  th:if="${user != null}" href="/index_l"  style="float: right;margin:10px; padding:10px;" class="btn btn-default curseButton"> My account </a>
+        <a  th:if="${user != null}" href="/index_l"  style="float: right;margin:10px; padding:10px;" class="btn btn-default curseButton"> My Courses</a>
         <form id="logoutForm" action="/logout"></form>
 
         <form th:action="@{/logout}" method="get">
@@ -54,42 +54,42 @@
 </ul>
 
 <ul class="nav nav-pills main-menu-items">
-    <li><a href="#home" class="main-menu-items">Nasza Misja</a></li>
-    <li><a href="#home" class="main-menu-items">O nas </a></li>
-    <li><a href="#home" class="main-menu-items">Kontakt</a></li>
-    <li><a href="#home" class="main-menu-items">Kursy</a></li>
+    
+    <li><a href="#home" class="main-menu-items">About </a></li>
+    <li><a href="#home" class="main-menu-items">Contact</a></li>
+    <li><a href="#home" class="main-menu-items">Courses</a></li>
 </ul>
 
 <ul class="nav nav-pills" id="submenu2">
     <div class="alert alert-success" id="alertAdd" hidden="hidden">
         <button type="button" class="close" data-hide="alert">&times;</button>
-        Dodano nowy kurs
+        Course added
     </div>
 
     <div class="alert alert-success" id="alertContentDelete" hidden="hidden">
         <button type="button" class="close" data-hide="alert">&times;</button>
-        Pomyślnie usunięto element kursu.
+        Element of course deleted.
     </div>
 
     <div class="alert alert-success" style="display:none; margin:20px 10px;" id="alertUpdate">
         <button class="close" data-dismiss="alert">&times;</button>
         <span id="success">
-					<b>Zaktualizowane dane kursu.</b>
+					<b>Course data updated.</b>
 				</span>
     </div>
 </ul>
 
 
 <div class="col-md-4">
-    <label for="myCurses" style="margin:30px;"> Dodaj nowy kurs: </label>
+    <label for="myCurses" style="margin:30px;"> Add new course: </label>
     <form id="cursesForm">
-        <label for="courseName">Nazwa kursu:</label>
-        <input id="courseName" style="width:400px;" type="text" placeholder="Nazwa kursu, np angular js Tutorial...">
-        <label for="coursePrice">Cena kursu:</label>
-        <input id="coursePrice" style="width:400px;" type="text" placeholder="Cena Kursu...">
-        <label for="courseCategory">Kategoria kursu:</label>
+        <label for="courseName">Name:</label>
+        <input id="courseName" style="width:400px;" type="text" placeholder="eg. angular js Tutorial...">
+        <label for="coursePrice">Price:</label>
+        <input id="coursePrice" style="width:400px;" type="text" placeholder="Price...">
+        <label for="courseCategory">Category:</label>
         <select id="courseCategory" style="width:400px;" class="form-control"
-                placeholder="Kategoria Kursu np. programowanie..">
+                placeholder="Category..">
 
             <option value="PROGRAMMING"> Programming</option>
             <option value="GRAPHICS"> Graphics</option>
@@ -101,9 +101,9 @@
 
         </select>
 
-        <label for="courseDesc">Opis Kursu:</label>
-        <textarea id="courseDesc" cols="50" rows="4" placeholder="Dokładny opis kursu..."></textarea>
-        <button type="button" class="btn btn-default" onclick="addNewCourse();">Dodaj nowy kurs!</button>
+        <label for="courseDesc">Description:</label>
+        <textarea id="courseDesc" cols="50" rows="4" placeholder="Description..."></textarea>
+        <button type="button" class="btn btn-default" onclick="addNewCourse();">Add course!</button>
 
 
     </form>
@@ -111,7 +111,7 @@
 
 
 <div class="col-md-8">
-    <label for="myCurses" style="margin: 30px;"> Kursy dodane przez użytkownika: admin </label>
+    <label for="myCurses" style="margin: 30px;"> Courses added by user </label>
     <div id="myCurses" style="border:none;margin:0px;">
 
 
@@ -127,17 +127,17 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title" id="modalTitle">Edytuj kurs</h4>
+                <h4 class="modal-title" id="modalTitle">Edit course</h4>
             </div>
             <div class="modal-body">
-                Nazwa Kursu:
+                Name:
                 <input type="text" style="width:100%;" id="courseNamePopUp"/><br/>
-                Cena Kursu:
+                Price:
                 <input type="text" style="width:100%;" id="coursePricePopUp"/><br/>
 
-                Kategoria Kursu:
+                Category:
                 <select id="courseCategoryPopUp" style="width:100%;" class="form-control"
-                        placeholder="Kategoria Kursu np. programowanie..">
+                        placeholder="Category..">
 
                     <option value="PROGRAMMING"> Programming</option>
                     <option value="GRAPHICS"> Graphics</option>
@@ -148,7 +148,7 @@
                     <option value="OTHER"> Other</option>
 
                 </select>
-                Opis Kursu:
+               	Description:
                 <textarea style="width:100%;" id="courseDescPopUp"></textarea>
                 <br/>
                 <span style="visibility: hidden;" id="courseId"></span>
@@ -156,7 +156,7 @@
 
             <div class="modal-footer">
                 <button type="button" class="offset3 btn btn-primary btn-round" data-dismiss="modal"
-                        onclick="updateCurseData($('#courseId').html());">Zapisz
+                        onclick="updateCurseData($('#courseId').html());">Save
                 </button>
             </div>
         </div>
@@ -172,10 +172,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Usuń</h4>
+                <h4 class="modal-title">Delete</h4>
             </div>
             <div class="modal-body">
-                <p>Czy na pewno chcesz usunąć kurs (zmiany nie będą mogły być cofnięte)? <span
+                <p>Are you sure you want to delete? <span
                         style="visibility:hidden;" id="courseId2"></span>
                 </p>
 
@@ -183,9 +183,9 @@
 
             <div class="modal-footer">
                 <button type="button" class="offset3 btn btn-primary btn-round" data-dismiss="modal"
-                        onclick="deleteCourse($('#courseId2').html());">Usuń Kurs
+                        onclick="deleteCourse($('#courseId2').html());">Delete course
                 </button>
-                <button type="button" class="offset3 btn btn-primary btn-round" data-dismiss="modal">Zamknij
+                <button type="button" class="offset3 btn btn-primary btn-round" data-dismiss="modal">Close
                 </button>
             </div>
         </div>
@@ -201,14 +201,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title" id="modalContentAdd">Dodaj do kursu:</h4>
+                <h4 class="modal-title" id="modalContentAdd">Add to course:</h4>
             </div>
             <div class="modal-body">
                 <form id="form2" action="/file" method="post" enctype="multipart/form-data">
 
-                    Dodaj Plik:
+                    Add content:
                     <input type="file" name="file" style="width:100%;" id="courseContentFile"/><br/>
-                    Opis:
+                    Description:
                     <input type="text" name="description" style="width:100%;" id="courseContentDescription"/><br/>
                     Order:
                     <input type="number" min="0" step="1" name="orderNr" style="width:100%;" id="courseContentOrderNumber"/><br/>
@@ -242,7 +242,7 @@
                     </div>
 
                     <div class="modal-body">
-                        <p>Czy na pewno chcesz usunąć atrybut? (zmiany nie będą mogły być cofnięte)? <span
+                        <p>Are you sure you want to delete? <span
                                 style="visibility:hidden;" id="deleteContentId"></span>
                         </p>
 
@@ -250,9 +250,9 @@
 
                     <div class="modal-footer">
                         <button type="button" class="offset3 btn btn-primary btn-round" data-dismiss="modal"
-                                onclick="deleteContent($('#deleteContentId').html());">Usuń Kurs
+                                onclick="deleteContent($('#deleteContentId').html());">Delete course
                         </button>
-                        <button type="button" class="offset3 btn btn-primary btn-round" data-dismiss="modal">Zamknij
+                        <button type="button" class="offset3 btn btn-primary btn-round" data-dismiss="modal">Close
                         </button>
                     </div>
                 </div>
