--- a/src/main/resources/templates/video.html
+++ b/src/main/resources/templates/video.html
@@ -9,19 +9,38 @@
 	<title>Insert title here</title>
 </head>
 <body>
-<video width="320" height="240" controls>
-  <source id="video" iter="0" src="content\test\mov_bbb.mp4" type="video/mp4">
+<div id="content">
+<span id="traningId123" th:text="${first.training_id}" style="visibility:hidden;"></span>
+<span id="order_nr" th:text="${first.order_nr}" style="visibility:hidden;"></span>
+<span id="traningName" th:text="${t_name}"></span>
+<video id="video" width="320" height="240" controls>
+  <source id="src" iter="0" th:src="${first.path}" type="video/mp4">
+  <!--  <source id="src" iter="0" src="..\content\test\mov_bbb.mp4" type="video/mp4">-->
 Your browser does not support the video tag.
 </video>
-<img src="images/beer.jpg" alt="Smiley face" height="42" width="42">
-<span th:text="${courses[0].path}"></span>
-<button onclick="nextVideo()">Next video</button>
+<span id="description" th:text="${first.description}"></span>
+<!-- <button onclick="nextVideo($('#traningId123').html(), $('#order_nr').html())">Next video</button> -->
 <button onclick="addVideo()">add video</button>
+</div>
 </body>
 
 <script>
-function nextVideo() {
-	$('#video').attr('src', 'content\\test\\small.mp4');
+function nextVideo(id, ordernr) {
+	ordernr = Number(ordernr) +1;
+	$.get( "/content/"+id+"/"+ordernr, function (data) {
+        if (data.length == 0){
+
+        }
+        else{
+                $('#order_nr').empty().append(data.order_nr);
+                $('#description').empty().append(data.description);
+                $('#video').remove();
+                var video = "<video id='video' width='320' height='240' controls> <source id='src' iter='0' src='"+data.path+"' type='video/mp4'></video>";
+                $("content").append(video);
+            
+        }
+    });
+	//$('#video').attr('src', 'content\\test\\small.mp4');
 	//var iter = $('#video').attr('iter');
 	//iter = Number(iter) +1;
 	//console.log("iterator: " + iter);
@@ -31,7 +50,8 @@ function nextVideo() {
 }
 
 function addVideo(){
-	var video = "<video width='320' height='240' controls> <source id='video' iter='0' src='content\\test\\small.mp4' type='video/mp4'></video>";
+	$('#video').remove();
+	var video = "<video id='video' width='320' height='240' controls> <source id='src' iter='0' src='content\\test\\small.mp4' type='video/mp4'></video>";
 	$("body").append(video);  
 }
 
