some stuff added.

--- a/src/main/resources/static/css/sarna.css
+++ b/src/main/resources/static/css/sarna.css
@@ -11,13 +11,22 @@ body {
 }
 
 
+.loggedInList{
+    padding: 10px;
+    list-style-type: none;
+}
+
+.loggedInList li{
+    padding:10px;
+
+}
+
 
 ul.main-menu {
 
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 ul.main-menu li {
