--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,9 +24,9 @@
 <body>
 
 <ul class="main-menu">
-    <li><a class="active" href="#home" id="mainLogo"><img width="151" height="38" src="/images/logo.jpg"/></a></li>
+    <li><a class="active" href="./index" id="mainLogo"><img width="151" height="38" src="/images/logo.jpg"/></a></li>
 
-    <li><input type="text" aria-label="Szukaj kursów: " placeholder="Szukaj Kursów..." id="findCourse">
+    <li><input type="text" aria-label="Search " placeholder="Search..." id="findCourse">
         <button type="button" class="btn btn-default" id="courseLookupButton">Search</button>
     </li>
 
