--- a/src/main/resources/templates/loggedIndex.html
+++ b/src/main/resources/templates/loggedIndex.html
@@ -24,7 +24,7 @@
 <body>
 
 <ul class="main-menu">
-    <li><a class="active" href="#home" id="mainLogo"><img width="151" height="38" src="/images/logo.jpg"/></a></li>
+    <li><a class="active" href="./index" id="mainLogo"><img width="151" height="38" src="/images/logo.jpg"/></a></li>
 
     <li><input type="text" aria-label="Szukaj kursów: " placeholder="Szukaj Kursów..." id="findCourse">
         <button type="button" class="btn btn-default" id="courseLookupButton">Search</button>
@@ -45,8 +45,8 @@
             <span class="caret"></span></button>
         <ul class="dropdown-menu">
             <li><a href="./userData">My profile</a></li>
-            <li><a href="#">My courses</a></li>
-            <li><a href="#">My Tasks</a></li>
+            <li><a href="./myCourses">My courses</a></li>
+            <li><a href="./tasks">My Tasks</a></li>
             <li><a href="./index_l">Trainer page</a></li>
             <li>
                 <form id="logoutForm" action="/logout"></form>
