--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -15,7 +15,10 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-				<form autocomplete="off" action="#" th:action="@{'/registration?token=' + ${param.token[0]}}"
+				<!-- <form autocomplete="off" action="#" th:action="@{'/registration?token=' + ${param.token[0]}}"
+					th:object="${user}" method="post" class="form-horizontal"
+					role="form"> -->
+					<form autocomplete="off" action="#" th:action="@{/registration}"
 					th:object="${user}" method="post" class="form-horizontal"
 					role="form">
 					<h2>Registration Form</h2>
