--- a/src/main/resources/templates/video2.html
+++ b/src/main/resources/templates/video2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <video width="320" height="240" controls>
-  <source src="content\test\small.mp4" type="video/mp4">
+  <source src="contents\test\small.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
 <!-- <img src="images/beer.jpg" alt="Smiley face" height="42" width="42">  -->
